# Phasis

./: README.md  knn_model.pkl  phasis.py  pyproject.toml
phasis/: __init__.py  bridge.py  cache.py  cli.py  config.py  deps_check.py  from.hive.phasis.py  ids.py  index_integrity.py  legacy.py  libprep.py  parallel.py  pipeline.py  runtime.py  state.py
phasis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phasis/stages/: __init__.py  candidates_merge.py  classify.py  cluster_aggregation.py  cluster_build.py  cluster_scoring.py  dependency_check.py  feature_assembly.py  folder_setup.py  indexing.py  input_validation.py  library_processing.py  mapping.py  output.py  phas_clusters.py  phase1_pipeline.py  phase2_pipeline.py  sam_parsing.py  window_scoring.py  window_selection.py
support_scripts/: KNN_model_trainer.py  README.txt  TagToFasta.py  fastaToTag.py  fastqToTag.py  fastq_to_fasta.sh  phasMatch.py  phasMatch.v03.py  replace_genome_headers.py
